# hazlo

./: .dir-locals.el  README  autogen.sh  configure.ac  xdg-build.sh
data/: Makefile.am  app-menu.ui  hazlo.css  hazlo.desktop.in.in  hazlo.gresource.xml  task-list-row.ui
po/: POTFILES.in
src/: Makefile.am  hazlo.gresource.xml  hzl-application-window.c  hzl-application-window.h  hzl-application.c  hzl-application.h  hzl-main.c  hzl-task-list-row.c  hzl-task-list-row.h  hzl-task.c  hzl-task.h  hzl-tasks-list.c  hzl-tasks-list.h  hzl-utils.c  hzl-utils.h
